20.07.2024_some_tests_init